--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body {
           cursor: pointer;
           font-size: 12px;
           font-weight: bold;
-          color: white;
+          color: blue;
           border: none;
           margin-top: 5px;
           background: none;
