--- a/main/style.css
+++ b/main/style.css
@@ -89,6 +89,10 @@ body {
           cursor: pointer;
 }
 
+.login-btn.active{
+          font-weight: bold;
+} 
+
 
 .sidbar {
           width: 50px;
