--- a/main/style.css
+++ b/main/style.css
@@ -16,7 +16,9 @@ body {
 .navbar-container {
           display: flex;
           align-items: center;
-          padding: 0 50px;
+          /* padding: 0 50px; */
+          padding-left: 50px;
+          padding-right: 20px;
           height: 100%;
           color: white;
           font-family: "Sen", sans-serif;
@@ -28,37 +30,67 @@ body {
           padding-right: 10px;
 }
 
-.logo-container {
+/* .logo-container {
           flex: 2;
-
-
-}
+} */
 
 
 .logo {
           font-size: 25px;
-          color: greenyellow;
+          cursor: pointer;
+          padding: 5px 10px;
+          color: rgb(0, 0, 0);
+          background: linear-gradient(90deg, rgba(16,0,255,1) 0%, rgba(255,0,219,1) 50%, rgba(255,0,0,1) 100%);
 }
 
 .menu-container {
-          flex: 6;
-
-
+          flex: 2;
+          /* background: #00bdff; */
 }
 
 .menu-list {
           display: flex;
           list-style: none;
-
+          font-weight: bold;
 }
 
 .menu-list-item {
-          margin-right: 30px;
+          margin-right: 25px;
           cursor: pointer;
 }
 
 .menu-list-item.active {
-          font-weight: bold;
+          font-weight: bolder;
+          color: #0079ff;
+}
+
+.search_user{
+          flex: 2;
+          position: relative;
+          display: flex;
+          /* align-items: center; */
+          justify-content: right;
+          /* background-color: #0079ff; */
+          height: 60%;
+}
+
+.search_user i{
+          padding: 5px 10px;
+          color: #ffa600;
+          /* color: white; */
+          font-size: 20px;
+          
+}
+
+.search_user input{
+          padding: 3px 10px;
+          font-size: 15px;
+          border-radius: 5px;
+          border: none;
+          outline: none;
+          background: rgba(255, 255, 255, 0.859);
+          color: #000000;
+          /* margin-right: 10px;           */
 }
 
 .profile-container {
@@ -66,11 +98,13 @@ body {
           display: flex;
           align-items: center;
           justify-content: flex-end;
+          /* background: #0079ff; */
 
 }
 
 .profile-text-container {
-          margin: 0 20px;
+          margin-left: 5px;
+          margin-right: 15px;
 }
 
 .profile-picture {
@@ -82,17 +116,19 @@ body {
 .login-btn {
           background-color: lightgray;
           color: black;
-          padding: 10px 20px;
-          font-weight: bold;
+          padding: 10px 15px;
+          font-size: medium;
+          font-weight: bolder;
           border-radius: 20px;
           display: flex;
           cursor: pointer;
-}
-
-.login-btn.active{
-          font-weight: bold;
 } 
 
+.login-btn:hover{
+          background-color: grey;
+          color: #fff;
+          
+}
 
 .sidbar {
           width: 50px;
@@ -113,6 +149,9 @@ body {
           font-size: 20px;
           margin-bottom: 40px;
           cursor: pointer;
+}
+.left-menu-icon:hover {
+          color: #0079ff;
 }
 
 .container {
@@ -140,30 +179,76 @@ body {
 
 
 .featured-title {
-          
+          font-family: "Grey Qo", cursive;
           font-weight: bolder;
           font-size: 45px;
           padding-left: 10px;
-          
           top: 55%;
-
-
-
 }
 
 .featured-desc {
-          width: 75%;
           color: snow;
-          margin: 30px 0;
+          /* margin: 30px 0; */
+          margin-top: 25px;
+          margin-bottom: 10px;
           padding-left: 10px;
           top: 60%;
+          text-align: justify;
+          font-size: 15px;
+          width: 600px;
 }
 
-.mybox1 {
+.featured-details{
+          display: flex;
+          align-items: center;
+          margin-top: 10px;
+          margin-bottom: 10px;
+          padding-left: 10px;
+}
+
+.featured-details h6{
+          color: rgba(255, 255, 255, 0.8);
+          font-size: 13px;
+          font-weight: bolder;
+          margin-right: 10px;
+}
+
+.featured-details h5{
+          color: rgb(149, 242, 50);
+          font-size: 13px;
+          font-weight: bold;
+          margin-right: 10px;
+}
+
+.featured-details h4{
+          color: #fff;
+          font-size: 12px;
+          font-weight: bold;
+          margin-right: 10px;
+}
+
+.featured-details h3{
+          color: #fff;
+          display: flex;
+          align-items: center;
+          font-size: 12px;
+}
+.featured-details h3 span{
+          background: yellow;
+          color: #000;
+          padding: 0px 3px;
+          margin: 0px 5px 0px 5px;
+          font-weight: bolder;
+}
+.featured-details h3 i{
+          margin-right: 5px;
+}
+
+/* .mybox1 {
           display: none;
-}
+} */
 
-.read-more-btn {
+/* .read-more-btn {
           cursor: pointer;
           font-size: 12px;
           font-weight: bold;
@@ -172,18 +257,26 @@ body {
           margin-top: 5px;
           background: none;
           
-}
+} */
 
 .featured-button {
-          background-color: greenyellow;
+          /* background-color: greenyellow; */
+          /* background: linear-gradient(90deg, #00bdff, #0079ff); */
+          background: linear-gradient(160deg, rgba(0,249,255,1) 20%, rgba(79,45,253,1) 90%);
           color: black;
-          padding: 10px 40px;
+          padding: 10px 20px;
+          margin-top: 5px;
           margin-left: 10px;
-          border-radius: 15px;
-          font-size: 16px;
-          font-weight: bold;
+          border-radius: 25px;
+          font-size: 15px;
+          font-weight: 800;
           bottom: 10%;
           cursor: pointer;
+}
+
+.featured-button i{
+          font-size: 16px;
+          font-weight: 800;
 }
 
 
@@ -231,28 +324,44 @@ body {
 .movie-list {
           display: flex;
           align-items: center;
-          height: 500px;
+          height: 450px;
           transform: translateX(0);
           transition: all 1s ease-in-out;
 
 }
 
-.movie-list-title{
-          font-size: 40px;
-          font-weight: bold;
-          margin-top: 20px;
-          width: 100%;
+.movie-list-title-container{
+          display: flex;
+          /* background: #ff0000; */
           background-color: rgb(38, 36, 36);
-          /* font-family: "Oswald", sans-serif; */
-          font-family: "Grey Qo", cursive;
+}
+
+.movie-list-title-container .movie-list-title{
+          flex: 9;
+          font-size: 20px;
           font-weight: bold;
+          /* margin-top: 20px; */
+          width: 7  0%;
+          /* font-family: "Grey Qo", cursive; */
+          font-family: "Luxurious Roman", serif;
+}
+.movie-list-title-container .movie-list-view_all{
+          /* flex: 1; */
+          font-size: 15px;
+          margin: 15px 10px;
+          text-align: center;
+          font-family: "Luxurious Roman", serif;
+          cursor: pointer;
+}
+.movie-list-title-container .movie-list-view_all:hover{
+          color: #0079ff;
 }
 
 .movie-list-item {
           margin-right: 30px;
           position: relative;
-
 }
+
 
 .movie-list-item :hover.movie-list-item-img {
           transform: scale(1.2);
@@ -271,7 +380,7 @@ body {
 .movie-list-item-img {
           transition: all 1s ease-in-out;
           width: 360px;
-          height: 400px;
+          height: 360px;
           object-fit: cover;
           border-radius: 20px;
 }
@@ -319,10 +428,10 @@ body {
 .arrow {
           font-size: 120px;
           position: absolute;
-          top: 90px;
+          top: 180px;
           right: 0;
-          color: rgb(239, 235, 235);
-          opacity: 0.5;
+          color: rgb(187, 176, 176);
+          opacity: 0.7;
           cursor: pointer;
 }
 
