--- a/Login/regi.css
+++ b/Login/regi.css
@@ -11,7 +11,7 @@ body
     align-items: center;
     min-height: 100vh;
     background: #23242a;
-    background-image: url(/Images/wallpaper.jpg);
+    background-image: url(/batman.jpg);
     background-size: 100%;
     /* background-size: cover; */
     /* width: 100%;
