--- a/main/style.css
+++ b/main/style.css
@@ -9,7 +9,7 @@ body {
 
 .navbar {
           width: 100%;
-          height: 50px;
+          height: 60px;
           background-color: black;
 }
 
@@ -25,10 +25,16 @@ body {
 }
 
 .navbar-logo {
+          width: 240px;
+          /* width: auto; */
+          height: auto;
+          padding-right: 10px;
+}
+/* .navbar-logo {
           width: 50px;
           height: 50px;
           padding-right: 10px;
-}
+} */
 
 /* .logo-container {
           flex: 2;
@@ -75,10 +81,12 @@ body {
 }
 
 .search_user i{
-          padding: 5px 10px;
+          padding-top: 7px;
+          padding-left: 10px;
+          padding-right: 10px;
           color: #ffa600;
           /* color: white; */
-          font-size: 20px;
+          font-size: 22.5px;
           
 }
 
@@ -139,7 +147,7 @@ body {
           display: flex;
           flex-direction: column;
           align-items: center;
-          padding-top: 60px;
+          padding-top: 75px;
 
 }
 
@@ -287,52 +295,27 @@ body {
           font-weight: 800;
 }
 
-
-/* .autoplay-progress {
-          position: absolute;
-          right: 16px;
-          bottom: 16px;
-          z-index: 10;
-          width: 100%;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-weight: bold;
-          color: var(--swiper-theme-color);
-} */
-
-/* .autoplay-progress svg {
-          --progress: 0;
-          position: absolute;
-          left: 0;
-          top: 0px;
-          z-index: 10;
-          width: 60vh;
-          height: 60vh;
-          stroke-width: 4px;
-          stroke: var(--swiper-theme-color);
-          fill: none;
-          stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
-          stroke-dasharray: 125.6;
-          transform: rotate(-90deg);
-} */
-
 .movie-list-container {
-          padding: 0 20px;
+          padding: 20px 10px;
+          /* padding-top: 20px;
+          padding-bottom: 20px;
+          padding-left: 50px;
+          padding-right: 20px; */
 
 }
 
 .movie-list-wrapper {
           position: relative;
           overflow: hidden;
+          padding-left: 35px;
+          /* padding-right: 20px; */
 
 }
 
 .movie-list {
           display: flex;
           align-items: center;
-          height: 560px;
+          height: 450px;
           transform: translateX(0);
           transition: all 1s ease-in-out;
 
@@ -371,76 +354,191 @@ body {
 }
 
 
-.movie-list-item :hover.movie-list-item-img {
+.movie-list-item:hover .movie-list-item-img,
+.movie-list-item:hover .movie-list-item-trailer  {
+          transform: scale(1.2);
+          margin: 10px 30px;
+          opacity: 0.2;
+          /* opacity: 0; */
+}
+/* .movie-list-item :hover.movie-list-item-img {
           transform: scale(1.2);
           margin: 0 30px;
           opacity: 0.5;
+          opacity: 0;
+} */
 
-}
-
-.movie-list-item:hover .movie-list-item-title,
+/* .movie-list-item:hover .movie-list-item-title,
 .movie-list-item:hover .movie-list-item-desc,
 .movie-list-item:hover .movie-list-item-button {
           opacity: 1;
+} */
+.movie-list-item:hover .movie-list-item-trailer{
+          opacity: 0.9;
+          transition: all 1.1s ease-in-out;
+          border-radius: 10px;
+          
 }
+.movie-list-item:hover .movie-list-item-title,
+.movie-list-item:hover .movie-list-item-details,
+.movie-list-item:hover .movie-list-item-rating,
+.movie-list-item:hover .movie-list-item-button {
+          opacity: 1;
+          transition: all 1.2s ease-in-out;
+}
+
+/* .movie-list-item:hover .movie-list-item-trailer{
+          width: 360px;
+          height: 250px;
+          top: auto;
+} */
+
 
 
 .movie-list-item-img {
           transition: all 1s ease-in-out;
           width: 350px;
-          height: 450px;
+          height: 350px;
           /* object-fit: cover; */
           border-radius: 20px;
 }
 
-.movie-list-item-title {
-          background-color: #333333a3;
-          padding: 0 10px;
-          font-size: 15px;
-          font-weight: bold;
+.movie-list-item-trailer{
+          width: 330px;
+          height: auto;
           position: absolute;
-          top: 5%;
-          left: 25px;
+          top: 2%;
+          left: 10px;
           opacity: 0;
           transition: 1s all ease-in-out;
 }
 
-.movie-list-item-desc {
-          background-color: #333333a3;
-          height: 50px;
-          padding: 10px;
-          font-size: 12px;
+.movie-list-item-title {
+          font-family: "Grey Qo", cursive;
+          background-color: #c2b9b9a3;
+          color: #000;
+          padding: 0 10px;
+          font-size: 18px;
+          font-weight: bolder;
           position: absolute;
-          top: 30%;
-          left: 25px;
-          width: 200px;
+          border-radius: 10px;
+          top: 62%;
+          left: 10px;
           opacity: 0;
           transition: 1s all ease-in-out;
-          overflow-y: scroll;
+}
+
+.movie-list-item-details{
+          position: absolute;
+          display: flex;
+          top: 73%;
+          padding: 0px 15px;
+          opacity: 0;
+          transition: 1s all ease-in-out;
+}
+
+.movie-list-item-details h6{
+          color: rgba(255, 255, 255, 0.8);
+          font-size: 13px;
+          font-weight: bolder;
+          margin-right: 10px;
+}
+
+.movie-list-item-details h5{
+          color: rgb(149, 242, 50);
+          font-size: 13px;
+          font-weight: bold;
+          margin-right: 10px;
+}
+
+.movie-list-item-details h4{
+          color: #fff;
+          font-size: 12px;
+          font-weight: bold;
+          margin-right: 10px;
+}
+
+.movie-list-item-rating{
+          position: absolute;
+          /* display: flex; */
+          top: 78%;
+          padding-left: 10px;
+          opacity: 0;
+          transition: 1s all ease-in-out;
+}
+
+.movie-list-item-rating h3{
+          color: #fff;
+          display: flex;
+          align-items: center;
+          font-size: 12px;
+}
+.movie-list-item-rating h3 span{
+          background: yellow;
+          color: #000;
+          padding: 0px 3px;
+          margin: 0px 5px 0px 5px;
+          font-weight: bolder;
+}
+.movie-list-item-rating h3 i{
+          margin-right: 5px;
 }
 
 .movie-list-item-button {
-          padding: 10px;
-          background-color: rgba(172, 255, 47, 0.538);
+          padding: 10px 15px;
+          background: linear-gradient(160deg, rgba(0,249,255,1) 20%, rgba(79,45,253,1) 90%);
           color: black;
-          border-radius: 10px;
+          border-radius: 25px;
+          font-size: 15px;
+          font-weight: 800;
+          text-align: left;
           outline: none;
           cursor: pointer;
           position: absolute;
-          bottom: 20px;
-          left: 25px;
+          bottom: 3%;
+          left: 10px;
           opacity: 0;
           transition: 1s all ease-in-out;
+
+          /* margin-top: 5px;
+          margin-left: 10px; */
+          
 }
 
-.arrow {
-          font-size: 120px;
+.arrow-left {
+          font-size: 60px;
           position: absolute;
-          top: 180px;
-          right: 0;
-          color: rgb(187, 176, 176);
-          opacity: 0.7;
+          /* top: 160px; */
+          top: 42%;
+          padding: 0px 3px;
+          left: 0;
+          color:#0079ff;
+          /* background-color: #000; */
+          opacity: 0.9;
           cursor: pointer;
+}
+
+.arrow-left:hover{
+          
+          opacity: 1;
+}
+
+.arrow-right {
+          font-size: 60px;
+          position: absolute;
+          /* top: 160px; */
+          top: 42%;
+          right: 0;
+          padding: 0px 3px;
+          color:#0079ff;
+          /* background-color: #000; */
+          opacity: 0.9;
+          cursor: pointer;
+}
+
+.arrow-right:hover{
+          color:#0079ff;
+          opacity: 1;
 }
 
 /* .container.active{
