--- a/Login/Forgett.css
+++ b/Login/Forgett.css
@@ -11,7 +11,7 @@ body
   align-items: center;
   min-height: 100vh;
   background: #23242a;
-  background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2f6ee145593361.5835d93a0fcea.jpg);
+  background-image: url(/Images/film-maker-project-design-template-dceab427bfa15a448867706535a136da_screen.jpg);
   background-size: 130%;
   /* background-size: cover; */
   /* width: 100%;
@@ -19,13 +19,14 @@ body
 }
 .registrationImg{
   position: fixed;
-  top: 5px;
-  left: 5px;
-  border-radius: 100px;
-  opacity: .9;
-  box-shadow: 5px 5px 70px cyan;
-  margin: 100px;
+  top: 40px;
+  left:1%;
+  border-radius: 60px;
+  box-shadow: 5px 5px 20px rgb(255, 145, 0);
+  margin: 50px;
   margin-top: 10px;
+  height: 150px;
+  width: 300px;
 }
 .box
 {
@@ -35,6 +36,7 @@ body
   background: #1c1c1c;
   border-radius: 50px 5px;
   overflow: hidden;
+  opacity: 0.8;
 }
 .box::before
 {
