--- a/registration/fs.css
+++ b/registration/fs.css
@@ -11,7 +11,7 @@ body {
     align-items: center;
     min-height: 100vh;
     background: linear-gradient(to right, #3b82f6, #9333ea), #23242a;
-    background-image: url(https://cdn.pixabay.com/photo/2018/08/23/07/35/thunderstorm-3625405_640.jpg);
+    background-image: url(/Images/4839516.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
