--- a/Login/regi.css
+++ b/Login/regi.css
@@ -11,11 +11,7 @@ body
     align-items: center;
     min-height: 100vh;
     background: #23242a;
-<<<<<<< HEAD
-    background-image: url(/Login/batman.jpg);
-=======
-    background-image: url(batman.jpg);
->>>>>>> c7e012785bb4b99bb35f8a15266bdb15b2cb7513
+    background-image: url(/Images/4839516.jpg);
     background-size: 100%;
     /* background-size: cover; */
     /* width: 100%;
