--- a/main/Video_playback/style_video.css
+++ b/main/Video_playback/style_video.css
@@ -36,7 +36,7 @@ body {
           cursor: pointer;
           padding: 5px 10px;
           color: rgb(0, 0, 0);
-          background: linear-gradient(90deg, rgba(16,0,255,1) 0%, rgba(255,0,219,1) 50%, rgba(255,0,0,1) 100%);
+          background: linear-gradient(90deg, rgba(16, 0, 255, 1) 0%, rgba(255, 0, 219, 1) 50%, rgba(255, 0, 0, 1) 100%);
 }
 
 .menu-container {
@@ -60,7 +60,7 @@ body {
           color: #0079ff;
 }
 
-.search_user{
+.search_user {
           flex: 2;
           position: relative;
           display: flex;
@@ -70,17 +70,17 @@ body {
           height: 60%;
 }
 
-.search_user i{
+.search_user i {
           padding-top: 7px;
           padding-left: 10px;
           padding-right: 10px;
           color: #ffa600;
           /* color: white; */
           font-size: 22.5px;
-          
+
 }
 
-.search_user input{
+.search_user input {
           padding: 3px 10px;
           font-size: 15px;
           border-radius: 5px;
@@ -120,12 +120,12 @@ body {
           border-radius: 20px;
           display: flex;
           cursor: pointer;
-} 
+}
 
-.login-btn:hover{
+.login-btn:hover {
           background-color: grey;
           color: #fff;
-          
+
 }
 
 .sidbar {
@@ -147,41 +147,51 @@ body {
           margin-bottom: 40px;
           cursor: pointer;
 }
+
 .left-menu-icon:hover {
           color: #0079ff;
 }
 
-.videoplayback_container {
+.videoplayback-container {
           background-color: #151515;
           min-height: calc(100vh - 50px);
           color: white;
 }
 
-.videoplayback_details{
-          background-color: rgb(95, 152, 202);
-          height: 50px;
-          margin-left: 60px;
+.videoplayback-heading {
+          /* background-color: rgb(95, 152, 202); */
+          font-family: "Grey Qo", cursive;
+          font-weight: bold;
+          font-size: 18px;
+          align-items: center;
+          /* height: 40px; */
+          padding: 15px;
+          margin-left: 70px;
           margin-right: 10px;
 }
 
-.video_container{
-          background-color:#0079ff;
+.video-container {
+          /* background-color:#; */
           height: 550px;
           margin-left: 60px;
-          margin-right: 10px;                  
+          margin-right: 10px;
+          display: flex;
 }
 
-.video_container video{
-          /* height: 500px; */
-          background-color: #fff;
-          margin-left: 350px;
+.video-container video {
+          height: 500px;
+          width: auto;
+          /* background-color: #fff; */
+          /* margin-left: 350px; */
+          flex: 6;
           /* right: 0; */
 }
 
-.video_content_container{
-          background-color: #ffa600;
+.video-episode-container {
+          background-color: #3f3f3f;
           width: 350px;
           height: 550px;
+          flex: 2;
 }
 
 /* 
@@ -192,130 +202,210 @@ body {
          
 } */
 
-.video_content_details{
-          background-color: chocolate;
-          height: 250px;
+.video-content-details {
+          /* background-color: rgb(94, 89, 85); */
+          height: 300px;
           margin-left: 60px;
           margin-right: 10px;
+          display: flex;
+          /* position: relative; */
 }
 
-
-/* .video_player{
-          background-color: #0079ff;
-          height: 500px;
-} */
-
-/* .container {
-          background-color: #151515;
-          min-height: calc(100vh - 50px);
-          color: white;
+.content-image {
+          flex: 1;
+          border-radius: 20px;
+          width: 100px;
+          height: 250px;
+          margin: 20px 30px 20px 5px;
 }
 
-.content-container {
-          margin-left: 50px;
-          
-} */
-
-
-
-/* .mySwiper{
-          height: 90vh;
+.content-details {
+          flex: 5;
 }
 
-
-.featured-content {
-          height: 450px;
-          background-color: aqua;
-          padding: 50px;
-          position: relative;
-          width: 1200px;
-}
-
-.featured-title {
+.content-details h2 {
           font-family: "Grey Qo", cursive;
-          font-weight: bolder;
-          font-size: 45px;
-          padding-left: 10px;
-          top: 55%;
-          width: auto;
+          font-weight: bold;
+          font-size: 30px;
+          margin-top: 25px;
 }
 
-.featured-desc {
+.content-details h5{
+          font-family: "Grey Qo", cursive;
+          font-weight: bold;
+          margin-top: 5px;
+          /* color: burlywood; */
+          /* color: rgb(149, 242, 50); */
+}
+
+.content-desc {
           color: snow;
-          margin: 30px 0;
-          margin-top: 25px;
-          margin-bottom: 10px;
-          padding-left: 10px;
-          top: 60%;
+          font-family: "Grey Qo", cursive;
+          /* font-family: "Hanuman", serif; */
+          font-weight: 100;
+          margin-top: 15px;
+          /* margin-bottom: 10px; */
+          /* padding-left: 10px; */
+          /* top: 60%; */
           text-align: justify;
           font-size: 15px;
           width: 600px;
 }
 
-.featured-details{
-          display: flex;
+.movie-details{
           align-items: center;
           margin-top: 10px;
-          margin-bottom: 10px;
-          padding-left: 10px;
+          /* margin-bottom: 5px; */
+          /* padding-left: 10px; */
 }
 
-.featured-details h6{
-          color: rgba(255, 255, 255, 0.8);
-          font-size: 13px;
-          font-weight: bolder;
-          margin-right: 10px;
-}
-
-.featured-details h5{
+.movie-details h5{
           color: rgb(149, 242, 50);
           font-size: 13px;
           font-weight: bold;
           margin-right: 10px;
 }
 
-.featured-details h4{
-          color: #fff;
-          font-size: 12px;
-          font-weight: bold;
-          margin-right: 10px;
-}
-
-.featured-details h3{
+.movie-details h3{
+          margin-top: 5px;
           color: #fff;
           display: flex;
           align-items: center;
           font-size: 12px;
 }
-.featured-details h3 span{
+.movie-details h3 span{
           background: yellow;
           color: #000;
           padding: 0px 3px;
-          margin: 0px 5px 0px 5px;
+          /* margin: 0px 5px 0px 5px; */
           font-weight: bolder;
 }
-.featured-details h3 i{
+.movie-details h3 i{
           margin-right: 5px;
+          margin-left: 5px;
 }
 
-.featured-button {
-          background-color: greenyellow;
-          background: linear-gradient(90deg, #00bdff, #0079ff);
-          background: linear-gradient(160deg, rgba(0,249,255,1) 20%, rgba(79,45,253,1) 90%);
-          color: black;
-          padding: 10px 20px;
-          margin-top: 5px;
-          margin-left: 10px;
-          border-radius: 25px;
+.content-castmembers {
+          background-color: #3f3f3f;
+          height: 20px;
+          margin-left: 50px;
+          margin-top: 20px;
+          font-family: "Grey Qo", cursive;
+          padding: 0px 0px 10px 15px;
+          font-size: 20px;
+          font-weight: bolder;
+}
+
+.castmembers-director {
+          /* height: 120px; */
+          font-family: "Grey Qo", cursive;
+          display: flex;
+}
+
+.castmembers-writers {
+          /* height: 400px; */
+          font-family: "Grey Qo", cursive;
+          display: flex;
+}
+
+.castmembers-cast {
+          /* height: 400px; */
+          font-family: "Grey Qo", cursive;
+          display: flex;
+}
+
+.castmembers-cast span {
+          margin-bottom: 20px;
+}
+
+/* .castmembers {
+          height: 150px;
+          font-family: "Grey Qo", cursive;
+          display: flex;
+} */
+
+.castmembers-details {
+          display: flex;
+}
+
+.castmembers-details img {
+          margin-left: 70px;
+          margin-top: 15px;
+          height: 100px;
+          width: 80px;
+          border-radius: 20px;
+}
+
+.castmembers-details span h4 {
+          font-size: 22px;
+          font-weight: bolder;
+          margin-top: 30px;
+          margin-left: 15px;
+}
+
+.castmembers-details span h2 {
           font-size: 15px;
-          font-weight: 800;
-          bottom: 10%;
+          color: chartreuse;
+          margin-top: 10px;
+          margin-left: 15px;
+}
+
+.endbar {
+          background-color: rgb(255, 255, 255);
+          height: 250px;
+          /* margin-top: 10px; */
+          margin-left: 50px;
+          background-image: url("/Images/bottom_background.jpg");
+}
+
+.endbar .endbar-socialmedia-icons {
+          display: flex;
+          border-bottom: 2px solid rgb(255, 255, 255);
+          width: 425px;
+          margin-left: 20px;
+}
+
+.endbar .endbar-socialmedia-icons img {
+          height: 80px;
+          width: 200px;
+          margin-top: 10px;
+          /* margin-left:30px; */
+          /* border-right: 3px solid black; */
+}
+
+.endbar .endbar-socialmedia-icons .border {
+          color:#f3d7a2;
+          margin-left: 10px;
+          margin-top: 30px;
+          margin-bottom: 15px;
+          padding-top: 8px;
+          padding-left: 10px;
+          font-size: 25px;
+          border-left: 2px solid rgb(255, 255, 255);
+}
+
+.endbar .endbar-socialmedia-icons abbr i {
+          color: #f3d7a2;
+          margin-left: 10px;
+          margin-top: 35px;
+          margin-bottom: 15px;
+          font-size: 30px;
+          font-weight: 500;
+}
+
+.endbar-socialmedia-icons abbr i:hover,
+.endbar-socialmedia-icons .border:hover {
+          color: #0079ff;
           cursor: pointer;
 }
 
-.featured-button i{
-          font-size: 16px;
-          font-weight: 800;
+.endbar-copyright {
+          color: #f3d7a2;
 }
-
-
+.endbar-copyright i {
+          font-size: 15px;
+          color: #f3d7a2;
+          margin-top: 130px;
+          margin-left: 20px;
+          margin-right: 5px;
+}
