--- a/main/style.css
+++ b/main/style.css
@@ -283,6 +283,7 @@ body {
           padding: 10px 20px;
           margin-top: 5px;
           margin-left: 10px;
+          margin-right: 5px;
           border-radius: 25px;
           font-size: 15px;
           font-weight: 800;
