--- a/Login/regi.css
+++ b/Login/regi.css
@@ -11,7 +11,7 @@ body
     align-items: center;
     min-height: 100vh;
     background: #23242a;
-    background-image: url(/Images/4839516.jpg);
+    background-image: url(/main/Images/4839516.jpg);
     background-size: 100%;
     /* background-size: cover; */
     /* width: 100%;
@@ -35,6 +35,7 @@ body
     background: #1c1c1c;
     border-radius: 50px 5px;
     overflow: hidden;
+    opacity: 0.85;
 }
 .box::before
 {
