--- a/main/style.css
+++ b/main/style.css
@@ -30,6 +30,7 @@ body {
           height: auto;
           padding-right: 10px;
 }
+
 /* .navbar-logo {
           width: 50px;
           height: 50px;
@@ -46,7 +47,7 @@ body {
           cursor: pointer;
           padding: 5px 10px;
           color: rgb(0, 0, 0);
-          background: linear-gradient(90deg, rgba(16,0,255,1) 0%, rgba(255,0,219,1) 50%, rgba(255,0,0,1) 100%);
+          background: linear-gradient(90deg, rgba(16, 0, 255, 1) 0%, rgba(255, 0, 219, 1) 50%, rgba(255, 0, 0, 1) 100%);
 }
 
 .menu-container {
@@ -70,35 +71,50 @@ body {
           color: #0079ff;
 }
 
-.search_user{
+
+.search_user {
           flex: 2;
           position: relative;
-          display: flex;
+          /* display: flex; */
+          margin-bottom: 10px;
+          /* padding: 5px; */
           /* align-items: center; */
           justify-content: right;
           /* background-color: #0079ff; */
-          height: 60%;
+          height: 50%;
+          z-index: 10;
+          left: 100px;
 }
 
-.search_user i{
+.search {
+          margin-top: 15px;
+}
+
+.search_user i {
           padding-top: 7px;
           padding-left: 10px;
           padding-right: 10px;
+          margin-top: 5px;
           color: #ffa600;
           /* color: white; */
           font-size: 22.5px;
-          
+
 }
 
-.search_user input{
+.search_user input {
           padding: 3px 10px;
           font-size: 15px;
           border-radius: 5px;
+          font-family: "Grey Qo", cursive;
           border: none;
           outline: none;
           background: rgba(255, 255, 255, 0.859);
           color: #000000;
-          /* margin-right: 10px;           */
+          /* margin-right: 10px;*/
+}
+
+.search_user input:hover .card {
+          opacity: 1;
 }
 
 .profile-container {
@@ -130,12 +146,12 @@ body {
           border-radius: 20px;
           display: flex;
           cursor: pointer;
-} 
+}
 
-.login-btn:hover{
+.login-btn:hover {
           background-color: grey;
           color: #fff;
-          
+
 }
 
 .sidbar {
@@ -158,6 +174,7 @@ body {
           margin-bottom: 40px;
           cursor: pointer;
 }
+
 .left-menu-icon:hover {
           color: #0079ff;
 }
@@ -170,12 +187,14 @@ body {
 
 .content-container {
           margin-left: 50px;
-          
+
 }
 
-.mySwiper{
+.mySwiper {
           height: 90vh;
 }
+
+
 
 
 .featured-content {
@@ -214,7 +233,7 @@ body {
           width: 600px;
 }
 
-.featured-details{
+.featured-details {
           display: flex;
           align-items: center;
           margin-top: 10px;
@@ -222,41 +241,43 @@ body {
           padding-left: 10px;
 }
 
-.featured-details h6{
+.featured-details h6 {
           color: rgba(255, 255, 255, 0.8);
           font-size: 13px;
           font-weight: bolder;
           margin-right: 10px;
 }
 
-.featured-details h5{
+.featured-details h5 {
           color: rgb(149, 242, 50);
           font-size: 13px;
           font-weight: bold;
           margin-right: 10px;
 }
 
-.featured-details h4{
+.featured-details h4 {
           color: #fff;
           font-size: 12px;
           font-weight: bold;
           margin-right: 10px;
 }
 
-.featured-details h3{
+.featured-details h3 {
           color: #fff;
           display: flex;
           align-items: center;
           font-size: 12px;
 }
-.featured-details h3 span{
+
+.featured-details h3 span {
           background: yellow;
           color: #000;
           padding: 0px 3px;
           margin: 0px 5px 0px 5px;
           font-weight: bolder;
 }
-.featured-details h3 i{
+
+.featured-details h3 i {
           margin-right: 5px;
 }
 
@@ -278,7 +299,7 @@ body {
 .featured-button {
           /* background-color: greenyellow; */
           /* background: linear-gradient(90deg, #00bdff, #0079ff); */
-          background: linear-gradient(160deg, rgba(0,249,255,1) 20%, rgba(79,45,253,1) 90%);
+          background: linear-gradient(160deg, rgba(0, 249, 255, 1) 20%, rgba(79, 45, 253, 1) 90%);
           color: black;
           padding: 10px 20px;
           margin-top: 5px;
@@ -291,7 +312,7 @@ body {
           cursor: pointer;
 }
 
-.featured-button i{
+.featured-button i {
           font-size: 16px;
           font-weight: 800;
 }
@@ -305,13 +326,13 @@ body {
 
 }
 
-.movie-list-title-container{
+.movie-list-title-container {
           display: flex;
           /* background: #ff0000; */
           background-color: rgb(38, 36, 36);
 }
 
-.movie-list-title-container .movie-list-title{
+.movie-list-title-container .movie-list-title {
           flex: 9;
           font-size: 20px;
           font-weight: bold;
@@ -321,7 +342,7 @@ body {
           /* font-family: "Luxurious Roman", serif; */
 }
 
-.movie-list-title-container .movie-list-view_all{
+.movie-list-title-container .movie-list-view_all {
           /* flex: 1; */
           font-size: 13px;
           margin: 15px 10px;
@@ -330,11 +351,11 @@ body {
           cursor: pointer;
 }
 
-.movie-list-title-container .movie-list-view_all:hover{
+.movie-list-title-container .movie-list-view_all:hover {
           color: #0079ff;
 }
 
-.movie-list-swiper{
+.movie-list-swiper {
           height: 75vh;
           display: flex;
           align-items: center;
@@ -366,18 +387,18 @@ body {
 }
 
 .movie-list-item:hover .movie-list-item-img,
-.movie-list-item:hover .movie-list-item-trailer  {
+.movie-list-item:hover .movie-list-item-trailer {
           transform: scale(1.25);
           margin: 10px 10px;
           opacity: 0.2;
           /* opacity: 0; */
 }
 
-.movie-list-item:hover .movie-list-item-trailer{
+.movie-list-item:hover .movie-list-item-trailer {
           opacity: 0.9;
           transition: all 1.1s ease-in-out;
           border-radius: 10px;
-          
+
 }
 
 .movie-list-item:hover .movie-list-item-title,
@@ -398,7 +419,7 @@ body {
 }
 
 
-.movie-list-item-trailer{
+.movie-list-item-trailer {
           width: 250px;
           height: 140px;
           position: absolute;
@@ -425,7 +446,7 @@ body {
           transition: 1s all ease-in-out;
 }
 
-.movie-list-item-details{
+.movie-list-item-details {
           position: absolute;
           display: flex;
           top: 55%;
@@ -434,28 +455,28 @@ body {
           transition: 1s all ease-in-out;
 }
 
-.movie-list-item-details h6{
+.movie-list-item-details h6 {
           color: rgba(255, 255, 255, 0.8);
           font-size: 13px;
           font-weight: bolder;
           margin-right: 10px;
 }
 
-.movie-list-item-details h5{
+.movie-list-item-details h5 {
           color: rgb(149, 242, 50);
           font-size: 13px;
           font-weight: bold;
           margin-right: 10px;
 }
 
-.movie-list-item-details h4{
+.movie-list-item-details h4 {
           color: #fff;
           font-size: 12px;
           font-weight: bold;
           margin-right: 10px;
 }
 
-.movie-list-item-rating{
+.movie-list-item-rating {
           position: absolute;
           /* display: flex; */
           top: 60%;
@@ -466,26 +487,28 @@ body {
           transition: 1s all ease-in-out;
 }
 
-.movie-list-item-rating h3{
+.movie-list-item-rating h3 {
           color: #fff;
           display: flex;
           align-items: center;
           font-size: 12px;
 }
-.movie-list-item-rating h3 span{
+
+.movie-list-item-rating h3 span {
           background: yellow;
           color: #000;
           padding: 0px 3px;
           margin: 0px 5px 0px 5px;
           font-weight: bolder;
 }
-.movie-list-item-rating h3 i{
+
+.movie-list-item-rating h3 i {
           margin-right: 5px;
 }
 
 .movie-list-item-button {
           padding: 10px 15px;
-          background: linear-gradient(160deg, rgba(0,249,255,1) 20%, rgba(79,45,253,1) 90%);
+          background: linear-gradient(160deg, rgba(0, 249, 255, 1) 20%, rgba(79, 45, 253, 1) 90%);
           color: black;
           border-radius: 25px;
           font-size: 15px;
@@ -501,7 +524,69 @@ body {
 
           /* margin-top: 5px;
           margin-left: 10px; */
-          
+
+}
+
+.endbar {
+          background-color: rgb(255, 255, 255);
+          height: 250px;
+          /* margin-top: 10px; */
+          /* margin-left: 50px; */
+          background-image: url("/main/Images/bottom_background.jpg");
+          background-blend-mode: darken;
+}
+
+.endbar .endbar-socialmedia-icons {
+          display: flex;
+          border-bottom: 2px solid rgb(255, 255, 255);
+          width: 425px;
+          margin-left: 20px;
+}
+
+.endbar .endbar-socialmedia-icons img {
+          height: 85px;
+          width: 220px;
+          margin-top: 10px;
+          /* margin-left:30px; */
+          /* border-right: 3px solid black; */
+}
+
+.endbar .endbar-socialmedia-icons .border {
+          color: #f3d7a2;
+          margin-left: 10px;
+          margin-top: 30px;
+          margin-bottom: 15px;
+          padding-top: 8px;
+          padding-left: 10px;
+          font-size: 25px;
+          border-left: 2px solid rgb(255, 255, 255);
+}
+
+.endbar .endbar-socialmedia-icons abbr i {
+          color: #f3d7a2;
+          margin-left: 10px;
+          margin-top: 35px;
+          margin-bottom: 15px;
+          font-size: 30px;
+          font-weight: 500;
+}
+
+.endbar-socialmedia-icons abbr i:hover,
+.endbar-socialmedia-icons .border:hover {
+          color: #0079ff;
+          cursor: pointer;
+}
+
+.endbar-copyright {
+          color: #f3d7a2;
+}
+
+.endbar-copyright i {
+          font-size: 15px;
+          color: #f3d7a2;
+          margin-top: 130px;
+          margin-left: 20px;
+          margin-right: 5px;
 }
 
 
@@ -589,3 +674,119 @@ body {
           background-color: white;
           transform: translateX(-20px);
 } */
+
+/* .card {
+          position: relative;
+          width: 100%;
+          height: 50px;
+          display: flex;
+          align-items: center;
+          margin-bottom: 5px;
+          padding: 3px 0px;
+          text-decoration: none;
+}
+
+.search_user .search .card::before {
+          background: rgb(255, 255, 255, .1);
+          backdrop-filter: blur(5px);
+          border-radius: 5px;
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          z-index: -1;
+}
+
+.card:hover {
+          transform: scale(1.05);
+          box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card img {
+          width: 100%;
+          height: auto;
+          border-radius: 8px 8px 0 0;
+}
+
+.card .cont {
+          padding: 10px;
+}
+
+.card h3 {
+          margin: 10px 0;
+          font-size: 1.2em;
+}
+
+.card p {
+          margin: 5px 0;
+          font-size: 0.9em;
+          color: #555;
+}
+
+.card p span {
+          font-weight: bold;
+}
+
+.card p i {
+          color: gold;
+          margin-left: 5px */
+
+.card {
+          display: block;
+          width: 220px;
+          height: 35px;
+          margin-bottom:10px ;
+          padding: 10px;
+          left: 45px;
+          text-decoration: none;
+          color: #000;
+          border: 1px solid #ddd;
+          border-radius: 8px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          transition: transform 0.2s, box-shadow 0.2s;
+          position: relative;
+          /* Ensure card is positioned correctly */
+          z-index: 5;
+          /* Ensure card stays in front of other content */
+          display: flex;
+          background-color: #8a8a8a;
+          opacity: 0;
+}
+
+.card:hover {
+          transform: scale(1.05);
+          box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card img {
+          width: auto;
+          height: 40px;
+          border-radius: 5px 0 5px 0;
+}
+
+.card .cont {
+          padding: 5px;
+}
+
+.card h3 {
+          /* margin: px 0; */
+          font-size: 16px;
+}
+
+.card p {
+          /* margin: 5px 0; */
+          font-size: 13px;
+          color: #000;
+}
+
+.card p span {
+          font-weight: bold;
+          font-size: 12px;
+}
+
+.card p i {
+          color: gold;
+          margin-left: 5px;
+          font-size: 12px;
+}
+
