--- a/Login/regi.css
+++ b/Login/regi.css
@@ -1,24 +1,23 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
-
-body {
+body
+{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background: #23242a;
-    background-image: url(/Images/4839516.jpg);
+    background-image: url(/main/Images/4839516.jpg);
     background-size: 100%;
     /* background-size: cover; */
     /* width: 100%;
     height: 100%; */
 }
-
-.registrationImg {
+.registrationImg{
     position: fixed;
     top: 5px;
     left: 5px;
@@ -28,52 +27,54 @@ body {
     margin: 100px;
     margin-top: 10px;
 }
-
-.box {
+.box
+{
     position: relative;
     width: 370px;
     height: 450px;
     background: #1c1c1c;
     border-radius: 50px 5px;
     overflow: hidden;
+    opacity: 0.85;
 }
-
-.box::before {
+.box::before
+{
     content: '';
     position: absolute;
     top: -50%;
     left: -50%;
     width: 370px;
     height: 450px;
-    background: linear-gradient(60deg, transparent, #45f3ff, #45f3ff);
+    background: linear-gradient(60deg,transparent,#45f3ff,#45f3ff);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
 }
-
-.box::after {
+.box::after
+{
     content: '';
     position: absolute;
     top: -50%;
     left: -50%;
     width: 370px;
     height: 450px;
-    background: linear-gradient(60deg, transparent, #d9138a, #d913d9);
+    background: linear-gradient(60deg,transparent,#d9138a,#d913d9);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
     animation-delay: -3s;
 }
-
-@keyframes animate {
-    0% {
+@keyframes animate
+{
+    0%
+    {
         transform: rotate(0deg);
     }
-
-    100% {
+    100%
+    {
         transform: rotate(360deg);
     }
 }
-
-form {
+form
+{
     position: absolute;
     inset: 2px;
     border-radius: 50px 5px;
@@ -83,21 +84,21 @@ form {
     display: flex;
     flex-direction: column;
 }
-
-h2 {
+h2
+{
     color: #45f3ff;
     font-size: 35px;
     font-weight: 500;
     text-align: center;
 }
-
-.inputBox {
+.inputBox
+{
     position: relative;
     width: 300px;
     margin-top: 35px;
 }
-
-.inputBox input {
+.inputBox input
+{
     position: relative;
     width: 100%;
     padding: 20px 10px 10px;
@@ -109,8 +110,8 @@ h2 {
     letter-spacing: 0.05em;
     z-index: 10;
 }
-
-input[type="submit"] {
+input[type="submit"]
+{
     font-size: 20px;
     border: none;
     outline: none;
@@ -121,13 +122,13 @@ input[type="submit"] {
     font-weight: 600;
     cursor: pointer;
 }
-
-input[type="submit"]:active {
-    background: linear-gradient(90deg, #45f3ff, #d9138a);
+input[type="submit"]:active
+{
+    background: linear-gradient(90deg,#45f3ff,#d9138a);
     opacity: 0.8;
 }
-
-.inputBox span {
+.inputBox span
+{
     position: absolute;
     left: 0;
     padding: 20px 10px 10px;
@@ -137,15 +138,15 @@ input[type="submit"]:active {
     letter-spacing: 0.05em;
     transition: 0.5s;
 }
-
-.inputBox input:valid~span,
-.inputBox input:focus~span {
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span
+{
     color: #45f3ff;
     transform: translateX(-10px) translateY(-30px);
     font-size: 0.75em;
 }
-
-.inputBox i {
+.inputBox i
+{
     position: absolute;
     left: 0;
     bottom: 0;
@@ -157,34 +158,33 @@ input[type="submit"]:active {
     pointer-events: none;
     z-index: 9;
 }
-
-.inputBox input:valid~i,
-.inputBox input:focus~i {
+.inputBox input:valid ~ i,
+.inputBox input:focus ~ i
+{
     height: 44px;
 }
-
-.links {
-    display: flex;
+.links
+{   display: flex;
     justify-content: space-between;
     margin: 25px 0;
     font-size: 1em;
     color: #8f8f8f;
     text-decoration: none;
 }
-
-.links a {
+.links a
+{
     margin: 25px 0;
     font-size: 1em;
     color: #8f8f8f;
     text-decoration: none;
 }
-
 .links a:hover,
-.links a:nth-child(2) {
+.links a:nth-child(2)
+{
     color: #45f3ff;
 }
-
-.links a:nth-child(2):hover {
+.links a:nth-child(2):hover
+{
     text-decoration: underline 2px;
     text-underline-offset: 5px;
 }
